src/generator/y.output

state 0
	$accept: .file_ $end 

	PACKAGE  shift 3
	.  error

	file_  goto 1
	package_  goto 2

state 1
	$accept:  file_.$end 

	$end  accept
	.  error


2: shift/reduce conflict (shift 6(0), red'n 8(0)) on IMPORT
state 2
	file_:  package_.import_list top_declaration_list EOF 
	import_list: .    (8)

	IMPORT  shift 6
	.  reduce 8 (src line 389)

	import_  goto 5
	import_list  goto 4

state 3
	package_:  PACKAGE.id terminal 

	IDENTIFIER  shift 8
	.  error

	id  goto 7

4: shift/reduce conflict (shift 19(0), red'n 19(0)) on FUNC
4: shift/reduce conflict (shift 20(0), red'n 19(0)) on VAR
4: shift/reduce conflict (shift 21(0), red'n 19(0)) on CONST
4: shift/reduce conflict (shift 22(0), red'n 19(0)) on TYPE
4: shift/reduce conflict (shift 23(0), red'n 19(0)) on STRUCT
4: shift/reduce conflict (shift 24(0), red'n 19(0)) on INTERFACE
state 4
	file_:  package_ import_list.top_declaration_list EOF 
	import_list:  import_list.import_ 
	top_declaration_list: .    (19)

	IMPORT  shift 6
	FUNC  shift 19
	VAR  shift 20
	CONST  shift 21
	TYPE  shift 22
	STRUCT  shift 23
	INTERFACE  shift 24
	.  reduce 19 (src line 403)

	import_  goto 10
	top_declaration  goto 11
	top_declaration_list  goto 9
	func_  goto 12
	var_  goto 14
	const_  goto 15
	type_  goto 16
	struct_  goto 17
	interface_  goto 18
	method  goto 13

state 5
	import_list:  import_.    (9)

	.  reduce 9 (src line 389)


state 6
	import_:  IMPORT.string_literal terminal 

	STRING_LITERAL  shift 26
	.  error

	string_literal  goto 25

state 7
	package_:  PACKAGE id.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 27

state 8
	id:  IDENTIFIER.    (160)

	.  reduce 160 (src line 807)


state 9
	file_:  package_ import_list top_declaration_list.EOF 
	top_declaration_list:  top_declaration_list.top_declaration 

	FUNC  shift 19
	VAR  shift 20
	CONST  shift 21
	TYPE  shift 22
	STRUCT  shift 23
	INTERFACE  shift 24
	EOF  shift 32
	.  error

	top_declaration  goto 33
	func_  goto 12
	var_  goto 14
	const_  goto 15
	type_  goto 16
	struct_  goto 17
	interface_  goto 18
	method  goto 13

state 10
	import_list:  import_list import_.    (10)

	.  reduce 10 (src line 389)


state 11
	top_declaration_list:  top_declaration.    (20)

	.  reduce 20 (src line 403)


state 12
	top_declaration:  func_.    (12)

	.  reduce 12 (src line 398)


state 13
	top_declaration:  method.    (13)

	.  reduce 13 (src line 398)


state 14
	top_declaration:  var_.    (14)

	.  reduce 14 (src line 398)


state 15
	top_declaration:  const_.    (15)

	.  reduce 15 (src line 398)


state 16
	top_declaration:  type_.    (16)

	.  reduce 16 (src line 398)


state 17
	top_declaration:  struct_.    (17)

	.  reduce 17 (src line 398)


state 18
	top_declaration:  interface_.    (18)

	.  reduce 18 (src line 398)


state 19
	func_:  FUNC.id template_params LPAREN parameter_list RPAREN block 
	method:  FUNC.symbol template_params PERIOD id LPAREN parameter_list RPAREN return_params block 

	IDENTIFIER  shift 8
	.  error

	id  goto 34
	symbol  goto 35

state 20
	var_:  VAR.id symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 36

state 21
	const_:  CONST.id symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 37

state 22
	type_:  TYPE.id template_params symbol 
	type_:  TYPE.id template_params struct_ 
	type_:  TYPE.id template_params interface_ 
	type_:  TYPE.id template_params map_ 
	type_:  TYPE.id template_params channel_ 

	IDENTIFIER  shift 8
	.  error

	id  goto 38

state 23
	struct_:  STRUCT.id LBRACE field_list RBRACE 

	IDENTIFIER  shift 8
	.  error

	id  goto 39

state 24
	interface_:  INTERFACE.id LBRACE interface_method_list RBRACE 

	IDENTIFIER  shift 8
	.  error

	id  goto 40

state 25
	import_:  IMPORT string_literal.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 41

state 26
	string_literal:  STRING_LITERAL.    (11)

	.  reduce 11 (src line 394)


state 27
	package_:  PACKAGE id terminal.    (6)

	.  reduce 6 (src line 376)


state 28
	terminal:  SEMICOLON.    (1)

	.  reduce 1 (src line 366)


state 29
	terminal:  NEWLINE.    (2)

	.  reduce 2 (src line 366)


state 30
	terminal:  EOF.    (3)

	.  reduce 3 (src line 366)


state 31
	terminal:  ILLEGAL.    (4)

	.  reduce 4 (src line 366)


state 32
	file_:  package_ import_list top_declaration_list EOF.    (5)

	.  reduce 5 (src line 368)


state 33
	top_declaration_list:  top_declaration_list top_declaration.    (21)

	.  reduce 21 (src line 403)


34: shift/reduce conflict (shift 43(0), red'n 56(0)) on LBRACK
state 34
	func_:  FUNC id.template_params LPAREN parameter_list RPAREN block 
	symbol:  id.    (56)
	template_params: .    (23)

	LBRACK  shift 43
	LPAREN  reduce 23 (src line 418)
	.  reduce 56 (src line 492)

	template_params  goto 42

35: shift/reduce conflict (shift 45(0), red'n 23(0)) on PERIOD
state 35
	method:  FUNC symbol.template_params PERIOD id LPAREN parameter_list RPAREN return_params block 
	symbol:  symbol.PERIOD symbol 
	template_params: .    (23)

	PERIOD  shift 45
	LBRACK  shift 43
	.  error

	template_params  goto 44

state 36
	var_:  VAR id.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 46

state 37
	const_:  CONST id.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 48

state 38
	type_:  TYPE id.template_params symbol 
	type_:  TYPE id.template_params struct_ 
	type_:  TYPE id.template_params interface_ 
	type_:  TYPE id.template_params map_ 
	type_:  TYPE id.template_params channel_ 
	template_params: .    (23)

	LBRACK  shift 43
	.  reduce 23 (src line 418)

	template_params  goto 49

state 39
	struct_:  STRUCT id.LBRACE field_list RBRACE 

	LBRACE  shift 50
	.  error


state 40
	interface_:  INTERFACE id.LBRACE interface_method_list RBRACE 

	LBRACE  shift 51
	.  error


state 41
	import_:  IMPORT string_literal terminal.    (7)

	.  reduce 7 (src line 382)


state 42
	func_:  FUNC id template_params.LPAREN parameter_list RPAREN block 

	LPAREN  shift 52
	.  error


state 43
	template_params:  LBRACK.parameter_list RBRACK 

	IDENTIFIER  shift 8
	.  error

	id  goto 55
	parameter  goto 54
	parameter_list  goto 53

state 44
	method:  FUNC symbol template_params.PERIOD id LPAREN parameter_list RPAREN return_params block 

	PERIOD  shift 56
	.  error


state 45
	symbol:  symbol PERIOD.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 57

state 46
	var_:  VAR id symbol.    (49)
	symbol:  symbol.PERIOD symbol 

	PERIOD  shift 45
	.  reduce 49 (src line 472)


state 47
	symbol:  id.    (56)

	.  reduce 56 (src line 492)


state 48
	const_:  CONST id symbol.    (50)
	symbol:  symbol.PERIOD symbol 

	PERIOD  shift 45
	.  reduce 50 (src line 479)


state 49
	type_:  TYPE id template_params.symbol 
	type_:  TYPE id template_params.struct_ 
	type_:  TYPE id template_params.interface_ 
	type_:  TYPE id template_params.map_ 
	type_:  TYPE id template_params.channel_ 

	IDENTIFIER  shift 8
	STRUCT  shift 23
	INTERFACE  shift 24
	MAP  shift 63
	CHANNEL  shift 64
	.  error

	struct_  goto 59
	interface_  goto 60
	map_  goto 61
	channel_  goto 62
	id  goto 47
	symbol  goto 58

state 50
	struct_:  STRUCT id LBRACE.field_list RBRACE 

	IDENTIFIER  shift 8
	.  error

	id  goto 67
	field  goto 66
	field_list  goto 65

state 51
	interface_:  INTERFACE id LBRACE.interface_method_list RBRACE 

	IDENTIFIER  shift 8
	.  error

	id  goto 70
	interface_method_list  goto 68
	interface_method  goto 69

state 52
	func_:  FUNC id template_params LPAREN.parameter_list RPAREN block 

	IDENTIFIER  shift 8
	.  error

	id  goto 55
	parameter  goto 54
	parameter_list  goto 71

state 53
	template_params:  LBRACK parameter_list.RBRACK 
	parameter_list:  parameter_list.COMMA parameter 

	COMMA  shift 73
	RBRACK  shift 72
	.  error


state 54
	parameter_list:  parameter.    (27)

	.  reduce 27 (src line 430)


state 55
	parameter:  id.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 74

state 56
	method:  FUNC symbol template_params PERIOD.id LPAREN parameter_list RPAREN return_params block 

	IDENTIFIER  shift 8
	.  error

	id  goto 75

57: shift/reduce conflict (shift 45(0), red'n 57(0)) on PERIOD
state 57
	symbol:  symbol.PERIOD symbol 
	symbol:  symbol PERIOD symbol.    (57)

	PERIOD  shift 45
	.  reduce 57 (src line 492)


state 58
	type_:  TYPE id template_params symbol.    (51)
	symbol:  symbol.PERIOD symbol 

	PERIOD  shift 45
	.  reduce 51 (src line 486)


state 59
	type_:  TYPE id template_params struct_.    (52)

	.  reduce 52 (src line 487)


state 60
	type_:  TYPE id template_params interface_.    (53)

	.  reduce 53 (src line 488)


state 61
	type_:  TYPE id template_params map_.    (54)

	.  reduce 54 (src line 489)


state 62
	type_:  TYPE id template_params channel_.    (55)

	.  reduce 55 (src line 490)


state 63
	map_:  MAP.LBRACK symbol RBRACK symbol 

	LBRACK  shift 76
	.  error


state 64
	channel_:  CHANNEL.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 77

state 65
	struct_:  STRUCT id LBRACE field_list.RBRACE 
	field_list:  field_list.field 

	IDENTIFIER  shift 8
	RBRACE  shift 78
	.  error

	id  goto 67
	field  goto 79

state 66
	field_list:  field.    (60)

	.  reduce 60 (src line 512)


state 67
	field:  id.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 80

state 68
	interface_:  INTERFACE id LBRACE interface_method_list.RBRACE 
	interface_method_list:  interface_method_list.interface_method 

	IDENTIFIER  shift 8
	RBRACE  shift 81
	.  error

	id  goto 70
	interface_method  goto 82

state 69
	interface_method_list:  interface_method.    (63)

	.  reduce 63 (src line 520)


state 70
	interface_method:  id.symbol LPAREN parameter_list RPAREN return_params 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 83

state 71
	func_:  FUNC id template_params LPAREN parameter_list.RPAREN block 
	parameter_list:  parameter_list.COMMA parameter 

	COMMA  shift 73
	RPAREN  shift 84
	.  error


state 72
	template_params:  LBRACK parameter_list RBRACK.    (24)

	.  reduce 24 (src line 419)


state 73
	parameter_list:  parameter_list COMMA.parameter 

	IDENTIFIER  shift 8
	.  error

	id  goto 55
	parameter  goto 85

state 74
	parameter:  id symbol.    (29)
	symbol:  symbol.PERIOD symbol 

	PERIOD  shift 45
	.  reduce 29 (src line 436)


state 75
	method:  FUNC symbol template_params PERIOD id.LPAREN parameter_list RPAREN return_params block 

	LPAREN  shift 86
	.  error


state 76
	map_:  MAP LBRACK.symbol RBRACK symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 87

state 77
	symbol:  symbol.PERIOD symbol 
	channel_:  CHANNEL symbol.    (148)

	PERIOD  shift 45
	.  reduce 148 (src line 739)


state 78
	struct_:  STRUCT id LBRACE field_list RBRACE.    (58)

	.  reduce 58 (src line 498)


state 79
	field_list:  field_list field.    (61)

	.  reduce 61 (src line 512)


state 80
	symbol:  symbol.PERIOD symbol 
	field:  id symbol.    (62)

	PERIOD  shift 45
	.  reduce 62 (src line 518)


state 81
	interface_:  INTERFACE id LBRACE interface_method_list RBRACE.    (59)

	.  reduce 59 (src line 505)


state 82
	interface_method_list:  interface_method_list interface_method.    (64)

	.  reduce 64 (src line 520)


state 83
	symbol:  symbol.PERIOD symbol 
	interface_method:  id symbol.LPAREN parameter_list RPAREN return_params 

	PERIOD  shift 45
	LPAREN  shift 88
	.  error


state 84
	func_:  FUNC id template_params LPAREN parameter_list RPAREN.block 

	LBRACE  shift 90
	.  error

	block  goto 89

state 85
	parameter_list:  parameter_list COMMA parameter.    (28)

	.  reduce 28 (src line 430)


state 86
	method:  FUNC symbol template_params PERIOD id LPAREN.parameter_list RPAREN return_params block 

	IDENTIFIER  shift 8
	.  error

	id  goto 55
	parameter  goto 54
	parameter_list  goto 91

state 87
	symbol:  symbol.PERIOD symbol 
	map_:  MAP LBRACK symbol.RBRACK symbol 

	PERIOD  shift 45
	RBRACK  shift 92
	.  error


state 88
	interface_method:  id symbol LPAREN.parameter_list RPAREN return_params 

	IDENTIFIER  shift 8
	.  error

	id  goto 55
	parameter  goto 54
	parameter_list  goto 93

state 89
	func_:  FUNC id template_params LPAREN parameter_list RPAREN block.    (22)

	.  reduce 22 (src line 409)


state 90
	block:  LBRACE.statement_list RBRACE 
	block:  LBRACE.statement_list RBRACE 

	IDENTIFIER  shift 8
	VAR  shift 127
	FOR  shift 132
	RANGE  shift 133
	BREAK  shift 134
	CONTINUE  shift 135
	GOTO  shift 136
	IF  shift 129
	ELSE  shift 130
	SWITCH  shift 131
	RETURN  shift 126
	FALLTHROUGH  shift 137
	SAFE  shift 138
	LBRACE  shift 90
	NEW_ASSIGN  shift 128
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	for_  goto 104
	range_  goto 105
	break_  goto 106
	continue_  goto 107
	goto_  goto 108
	if_  goto 101
	else_  goto 102
	switch_  goto 103
	return_  goto 98
	fallthrough_  goto 109
	safe  goto 110
	id  goto 47
	expr  goto 97
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	statement  goto 95
	block  goto 96
	statement_list  goto 94
	symbol  goto 125
	var_assign  goto 99
	new_assign  goto 100

state 91
	parameter_list:  parameter_list.COMMA parameter 
	method:  FUNC symbol template_params PERIOD id LPAREN parameter_list.RPAREN return_params block 

	COMMA  shift 73
	RPAREN  shift 142
	.  error


state 92
	map_:  MAP LBRACK symbol RBRACK.symbol 

	IDENTIFIER  shift 8
	.  error

	id  goto 47
	symbol  goto 143

state 93
	parameter_list:  parameter_list.COMMA parameter 
	interface_method:  id symbol LPAREN parameter_list.RPAREN return_params 

	COMMA  shift 73
	RPAREN  shift 144
	.  error


state 94
	block:  LBRACE statement_list.RBRACE 
	statement_list:  statement_list.terminal statement 
	block:  LBRACE statement_list.RBRACE 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	RBRACE  shift 145
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 146

state 95
	statement_list:  statement.    (31)

	.  reduce 31 (src line 449)


state 96
	statement:  block.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 147

state 97
	statement:  expr.terminal 
	binary_expr:  expr.PLUS expr 
	binary_expr:  expr.MINUS expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.MOD expr 
	ternary_expr:  expr.EQ expr 
	ternary_expr:  expr.NEQ expr 
	ternary_expr:  expr.LT expr 
	ternary_expr:  expr.GT expr 
	ternary_expr:  expr.LTE expr 
	ternary_expr:  expr.GTE expr 
	ternary_expr:  expr.NOT_AND expr 
	ternary_expr:  expr.NOT_OR expr 
	assign_expr:  expr.ASSIGN expr 
	assign_expr:  expr.ADD_ASSIGN expr 
	assign_expr:  expr.SUB_ASSIGN expr 
	assign_expr:  expr.MUL_ASSIGN expr 
	assign_expr:  expr.QUO_ASSIGN expr 
	assign_expr:  expr.REM_ASSIGN expr 
	assign_expr:  expr.AND_ASSIGN expr 
	assign_expr:  expr.OR_ASSIGN expr 
	accessor_expr:  expr.PERIOD id 
	index_expr:  expr.LBRACK expr RBRACK 
	slice_expr:  expr.LBRACK expr COLON expr RBRACK 
	call_expr:  expr.LPAREN argument_list RPAREN 
	range_expr:  expr.RANGE expr 
	channel_send_expr:  expr.CHANNEL_SEND expr 
	channel_receive_expr:  expr.NEW_ASSIGN CHANNEL_SEND symbol 
	bridge_expr:  expr.BRIDGE expr 
	transfer_expr:  expr.TRANSFER expr 

	NEWLINE  shift 29
	RANGE  shift 173
	SEMICOLON  shift 28
	PERIOD  shift 170
	LBRACK  shift 171
	LPAREN  shift 172
	ASSIGN  shift 162
	NEW_ASSIGN  shift 175
	ADD_ASSIGN  shift 163
	SUB_ASSIGN  shift 164
	MUL_ASSIGN  shift 165
	QUO_ASSIGN  shift 166
	REM_ASSIGN  shift 167
	AND_ASSIGN  shift 168
	OR_ASSIGN  shift 169
	PLUS  shift 149
	MINUS  shift 150
	MUL  shift 151
	DIV  shift 152
	MOD  shift 153
	EQ  shift 154
	NEQ  shift 155
	LT  shift 156
	GT  shift 157
	LTE  shift 158
	GTE  shift 159
	NOT_AND  shift 160
	NOT_OR  shift 161
	EOF  shift 30
	ILLEGAL  shift 31
	BRIDGE  shift 176
	CHANNEL_SEND  shift 174
	TRANSFER  shift 177
	.  error

	terminal  goto 148

state 98
	statement:  return_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 178

state 99
	statement:  var_assign.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 179

state 100
	statement:  new_assign.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 180

state 101
	statement:  if_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 181

state 102
	statement:  else_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 182

state 103
	statement:  switch_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 183

state 104
	statement:  for_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 184

state 105
	statement:  range_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 185

state 106
	statement:  break_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 186

state 107
	statement:  continue_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 187

state 108
	statement:  goto_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 188

state 109
	statement:  fallthrough_.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 189

state 110
	statement:  safe.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 190

state 111
	expr:  unary_expr.    (99)

	.  reduce 99 (src line 644)


state 112
	expr:  binary_expr.    (100)

	.  reduce 100 (src line 644)


state 113
	expr:  ternary_expr.    (101)

	.  reduce 101 (src line 644)


state 114
	expr:  assign_expr.    (102)

	.  reduce 102 (src line 644)


state 115
	expr:  new_assign_expr.    (103)

	.  reduce 103 (src line 644)


state 116
	expr:  accessor_expr.    (104)

	.  reduce 104 (src line 644)


state 117
	expr:  index_expr.    (105)

	.  reduce 105 (src line 644)


state 118
	expr:  slice_expr.    (106)

	.  reduce 106 (src line 644)


state 119
	expr:  call_expr.    (107)

	.  reduce 107 (src line 644)


state 120
	expr:  channel_send_expr.    (108)

	.  reduce 108 (src line 644)


state 121
	expr:  channel_receive_expr.    (109)

	.  reduce 109 (src line 644)


state 122
	expr:  bridge_expr.    (110)

	.  reduce 110 (src line 644)


state 123
	expr:  transfer_expr.    (111)

	.  reduce 111 (src line 644)


state 124
	expr:  range_expr.    (112)

	.  reduce 112 (src line 644)


125: shift/reduce conflict (shift 45(0), red'n 113(0)) on PERIOD
state 125
	symbol:  symbol.PERIOD symbol 
	expr:  symbol.    (113)

	PERIOD  shift 45
	.  reduce 113 (src line 644)


state 126
	return_:  RETURN.expr terminal 
	return_:  RETURN.terminal 

	NEWLINE  shift 29
	IDENTIFIER  shift 8
	SEMICOLON  shift 28
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	id  goto 47
	expr  goto 191
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125
	terminal  goto 192

state 127
	var_assign:  VAR.id ASSIGN expr terminal 

	IDENTIFIER  shift 8
	.  error

	id  goto 194

state 128
	new_assign:  NEW_ASSIGN.id ASSIGN expr terminal 
	new_assign_expr:  NEW_ASSIGN.id ASSIGN expr 

	IDENTIFIER  shift 8
	.  error

	id  goto 195

state 129
	if_:  IF.expr block 
	if_:  IF.expr block else_ 

	IDENTIFIER  shift 8
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 196
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125

state 130
	else_:  ELSE.block 
	else_:  ELSE.if_ block 

	IF  shift 129
	LBRACE  shift 90
	.  error

	if_  goto 198
	block  goto 197

state 131
	switch_:  SWITCH.expr LBRACE case_list RBRACE 

	IDENTIFIER  shift 8
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 199
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125

132: shift/reduce conflict (shift 8(0), red'n 83(0)) on IDENTIFIER
132: shift/reduce conflict (shift 128(10), red'n 83(0)) on NEW_ASSIGN
132: shift/reduce conflict (shift 139(1), red'n 83(0)) on PLUS
132: shift/reduce conflict (shift 140(1), red'n 83(0)) on MINUS
132: shift/reduce conflict (shift 141(9), red'n 83(0)) on NOT
132: shift/reduce conflict (shift 8(0), red'n 88(0)) on IDENTIFIER
132: shift/reduce conflict (shift 128(10), red'n 88(0)) on NEW_ASSIGN
132: shift/reduce conflict (shift 139(1), red'n 88(0)) on PLUS
132: shift/reduce conflict (shift 140(1), red'n 88(0)) on MINUS
132: shift/reduce conflict (shift 141(9), red'n 88(0)) on NOT
state 132
	for_:  FOR.for_init for_condition for_post block 
	for_init: .    (83)
	for_condition: .    (88)

	IDENTIFIER  shift 8
	VAR  shift 127
	NEW_ASSIGN  shift 128
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 201
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125
	for_init  goto 200
	for_condition  goto 204
	var_assign  goto 202
	new_assign  goto 203

state 133
	range_:  RANGE.expr block 

	IDENTIFIER  shift 8
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 205
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125

state 134
	break_:  BREAK.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 206

state 135
	continue_:  CONTINUE.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 207

state 136
	goto_:  GOTO.id terminal 

	IDENTIFIER  shift 8
	.  error

	id  goto 208

state 137
	fallthrough_:  FALLTHROUGH.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 209

state 138
	safe:  SAFE.terminal 

	NEWLINE  shift 29
	SEMICOLON  shift 28
	EOF  shift 30
	ILLEGAL  shift 31
	.  error

	terminal  goto 210

state 139
	unary_expr:  PLUS.expr 

	IDENTIFIER  shift 8
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 211
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125

state 140
	unary_expr:  MINUS.expr 

	IDENTIFIER  shift 8
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 212
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125

state 141
	unary_expr:  NOT.expr 

	IDENTIFIER  shift 8
	NEW_ASSIGN  shift 193
	PLUS  shift 139
	MINUS  shift 140
	NOT  shift 141
	.  error

	id  goto 47
	expr  goto 213
	unary_expr  goto 111
	binary_expr  goto 112
	ternary_expr  goto 113
	assign_expr  goto 114
	new_assign_expr  goto 115
	accessor_expr  goto 116
	index_expr  goto 117
	slice_expr  goto 118
	call_expr  goto 119
	channel_send_expr  goto 120
	channel_receive_expr  goto 121
	range_expr  goto 124
	bridge_expr  goto 122
	transfer_expr  goto 123
	symbol  goto 125

state 142
	method:  FUNC symbol template_params PERIOD id LPAREN parameter_list RPAREN.return_params block 

	IDENTIFIER  shift 8
	LPAREN  shift 216
	.  error

	id  goto 55
	parameter  goto 215
	return_params  goto 214

state 143
	symbol:  symbol.PERIOD symbol 
	map_:  MAP LBRACK symbol RBRACK symbol.    (143)

	PERIOD  shift 45
	.  reduce 143 (src line 705)


state 144
	interface_method:  id symbol LPAREN parameter_list RPAREN.return_params 

	IDENTIFIER  shift 8
	LPAREN  shift 216
	.  error

	id  goto 55
	parameter  goto 215
	return_params  goto 217
